Stretch fix

--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+
+html, body {
+  @apply max-w-full overflow-x-hidden;
+}
